--- a/spacex.html
+++ b/spacex.html
@@ -11,34 +11,21 @@
     <link rel="stylesheet" href="style.css" />
 </head>
 <body>
-    <header class=nav>
-        <div class="top-links big">
-            <div class=spacex-logo>
-                <img src=https://www.spacex.com/sites/spacex/files/spacex_logo_white.png alt="SpaceX logo"/>
-            </div>
-            <div class="white-links"></div>
-                <nav>
-                    <ul class="med-links text-grey">
-                        <li>FALCON 9</li>
-                        <li>FALCON HEAVY</li>
-                        <li>DRAGON</li>
-                        <li>STARSHIP</li>
-                    </ul>
-                </nav>
+    <nav>
+        <img src=https://www.spacex.com/sites/spacex/files/spacex_logo_white.png alt="SpaceX logo"/>
+        <div class="nav-container-1"></div>
+            <a class="nav-links-1" href="#">FALCON 9</a>
+            <a class="nav-links-1" href="#">FALCON HEAVY</a>
+            <a class="nav-links-1" href="#">DRAGON</a>
+            <a class="nav-links-1" href="#">STARSHIP</a>
+        </div>  
+        <div class="nav-container-2">
+            <a class="nav-links-2" href="#">UPDATES</a>
+            <a class="nav-links-2" href="#">ABOUT SPACEX</a>
+            <a class="nav-links-2" href="#">CAREERS</a>
+            <a class="nav-links-2" href="#">SHOP</a>
         </div>
-        <div class="top-links small">
-            <div class="grey-links">
-                <nav>
-                    <ul class="small-links text-white">
-                        <li>UPDATES</li>
-                        <li>ABOUT SPACEX</li>
-                        <li>CAREERS</li>
-                        <li>SHOP</li>
-                    </ul>
-                </nav>
-            </div>
-        </div>
-    </header>
+    </nav>
     <section class=main-front>
         <div class=image>
             <img src="https://www.spacex.com/sites/spacex/files/000_crew_dragon.jpg" />
@@ -52,20 +39,16 @@
 
 
     <footer>
-        <div class=footer-text>
-            <div class=foot-links>
-                <ul class="small-links text-white">
-                    <li>TWITTER</li>
-                    <li>YOUTUBE</li>
-                    <li>FLICKR</li>
-                    <li>INSTAGRAM</li>
-                    <li>PRIVACY</li>
-                </ul>
-            </div>
-            <div class="foot-copyright text-grey">
-                <p>© 2020 SPACE EXPLORATION TECHNOLOGIES CORP.</p>
-            </div>
+        <img src=https://www.spacex.com/sites/all/themes/spacex2012/images/logo-sm.png alt="SpaceX logo" class="foot-logo"/>    
+        <span class="foot-divider">|</span>
+        <div class="small-links text-white">
+            <a href="http://www.twitter.com/spacex" class="foot-link">TWITTER</a>
+            <a href="http://www.youtube.com/spacex" class="foot-link">YOUTUBE</a>
+            <a href="http://www.flickr.com/spacexphotos" class="foot-link">FLICKR</a>
+            <a href="http://www.instagram.com/spacex" class="foot-link">INSTAGRAM</a>
+            <a href="https://www.spacex.com/sites/spacex/files/privacy_policy_spacex.pdf" class="foot-link">PRIVACY</a>
         </div>
+        <span class="foot-copyright text-grey"> © 2020 SPACE EXPLORATION TECHNOLOGIES CORP.</span>
     </footer>
 </body>
 </html>
