--- a/spacex.html
+++ b/spacex.html
@@ -12,7 +12,7 @@
 </head>
 <body>
     <nav>
-        <img src=https://www.spacex.com/sites/spacex/files/spacex_logo_white.png alt="SpaceX logo"/>
+        <img src=https://www.spacex.com/sites/spacex/files/spacex_logo_white.png alt="SpaceX logo" class="logo"/>
         <div class="nav-container-1"></div>
             <a class="nav-links-1" href="#">FALCON 9</a>
             <a class="nav-links-1" href="#">FALCON HEAVY</a>
@@ -26,17 +26,21 @@
             <a class="nav-links-2" href="#">SHOP</a>
         </div>
     </nav>
-    <section class=main-front>
-        <div class=image>
-            <img src="https://www.spacex.com/sites/spacex/files/000_crew_dragon.jpg" />
-        </div>
-        <div class=bars>
 
+    <section class="main-image-container">
+        <div class="main-image-desc">
+            <a class="main-image-desc-link" href="#">STARLINK MISSION</a>
+            <a class="main-image-replay" href="#">WATCH REPLAY</a>
         </div>
-        
+        <div class="main-image-links">
+            <a class="main-image-selection" href="#">CREW DEMO-2 MISSION</a>
+            <a class="main-image-selection" href="#">STARSHIP</a>
+            <a class="main-image-selection" href="#">STARLINK MISSION</a>
+        </div>
     </section>
-    
+    <section class="white-content">
 
+    </section>
 
     <footer>
         <img src=https://www.spacex.com/sites/all/themes/spacex2012/images/logo-sm.png alt="SpaceX logo" class="foot-logo"/>    
